syntax = "proto3";

package trueauth;

option go_package = "github.com/sirjager/rpcs/trueauth";


message AllowIPRequest { string code = 1; }

message AllowIPResponse { string message = 1; }

